# novelnote

./: .gitignore  Cargo.toml  README.md  clippy.toml  novelnote-example.toml  rustfmt.toml
.github/workflows/: ci.yaml
admin/: Cargo.toml
admin/src/: client.rs  lib.rs  server.rs
database/: Cargo.toml
database/src/: lib.rs
deployment/: Containerfile
server/: Cargo.toml
server/src/: api.rs  lib.rs
src/: config.rs  main.rs
web/: Cargo.toml  index.html
web/src/: main.rs
