[package]
name = "novelnote_server"
version = "0.1.0-alpha.1"
description = "Server library for NovelNote, a self-hosted book tracker"
categories = ["web-programming", "web-programming::http-server"]
authors.workspace = true
edition.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true

[lints]
workspace = true

[dependencies]
axum = "0.8.8"
thiserror.workspace = true
tokio = { workspace = true, features = ["net"] }
tracing.workspace = true
tracing-error.workspace = true
