[package]
name = "novelnote_server"
version = "0.1.0-alpha.2"
description = "Server library for NovelNote, a self-hosted book tracker"
categories = ["web-programming", "web-programming::http-server"]
authors.workspace = true
edition.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true

[lints]
workspace = true

[dependencies]
axum = "0.8.8"
novelnote_database.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["net"] }
tower-http = { version = "0.6.8", features = ["timeout", "trace"] }
tracing.workspace = true
tracing-error.workspace = true
utoipa = { version = "5.4.0", features = ["axum_extras"] }
utoipa-axum = "0.2.0"
utoipa-redoc = { version = "6.0.0", features = ["axum"] }
